modifications for review according to sprint-6 task - rev00